force-app/main/default/objects/Enrolment__c/Enrolment__c.object-meta.xml
<CustomObject>
    <label>Enrolment</label>
    <nameField>
        <displayFormat>ENR-{00000}</displayFormat>
        <label>Enrolment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>