force-app/main/default/objects/Enrolment__c/fields/Attendance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Percent__c</fullName>
    <label>Attendance %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>