force-app/main/default/objects/Enrolment__c/fields/Enrolment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Date__c</fullName>
    <label>Enrolment Date</label>
    <type>Date</type>
</CustomField>