force-app/main/default/objects/Enrolment__c/fields/Enrolment_Key__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Key__c</fullName>
    <externalId>true</externalId>
    <label>Enrolment Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>