force-app/main/default/objects/Enrolment__c/validationRules/Payment_Not_Above_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Not_Above_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c &gt; Cohort__r.Course__r.Fee__c</errorConditionFormula>
    <errorMessage>Amount Paid cannot exceed the course fee.</errorMessage>
</ValidationRule>